WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
104837
[BlackBerry] Fix word matching algorithm to account for adjacent divs with no whitespace between them.
https://bugs.webkit.org/show_bug.cgi?id=104837
Summary
[BlackBerry] Fix word matching algorithm to account for adjacent divs with no...
Mike Fenton
Reported
2012-12-12 12:59:49 PST
Eliminate the check for whitespace after the selection point in case we are the end of of a node and the next node starts with text.
Attachments
Patch
(3.52 KB, patch)
2012-12-12 13:19 PST
,
Mike Fenton
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Mike Fenton
Comment 1
2012-12-12 13:19:07 PST
Created
attachment 179114
[details]
Patch
Rob Buis
Comment 2
2012-12-12 13:21:37 PST
Comment on
attachment 179114
[details]
Patch LGTM.
WebKit Review Bot
Comment 3
2012-12-12 13:52:25 PST
Comment on
attachment 179114
[details]
Patch Clearing flags on attachment: 179114 Committed
r137513
: <
http://trac.webkit.org/changeset/137513
>
WebKit Review Bot
Comment 4
2012-12-12 13:52:28 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug