[BlackBerry] Fix word matching algorithm to account for adjacent divs with no whitespace between them. https://bugs.webkit.org/show_bug.cgi?id=104837

Reviewed by Rob Buis.

PR 258038.

Fix selection at the end of content editable text block.

The next character may be in the next block bypassing the distance
comparison logic we have, remove the check for next character being
whitespace

Reviewed Internally by Nima Ghanavatian.

* WebKitSupport/DOMSupport.cpp:
(BlackBerry::WebKit::DOMSupport::visibleSelectionForClosestActualWordStart):


Canonical link: https://commits.webkit.org/123067@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@137513 268f45cc-cd09-0410-ab3c-d52691b4dbfc