Source/WebKit/blackberry/WebKitSupport/DOMSupport.cpp
@@ -467,15 +467,14 @@ VisibleSelection visibleSelectionForClosestActualWordStart(const VisibleSelectio
     // it selects the paragraph marker. As well, if the position is at the end of a word, it will select
     // only the space between words. We want to select an actual word so we move the selection to
     // the start of the leftmost word if the character after the selection point is whitespace.
-    if (selection.selectionType() != VisibleSelection::RangeSelection && isWhitespace(selection.visibleStart().characterAfter())) {
+    if (selection.selectionType() != VisibleSelection::RangeSelection) {
         VisibleSelection leftSelection(previousWordPosition(selection.start()));
         bool leftSelectionIsOnWord = !isWhitespace(leftSelection.visibleStart().characterAfter());
 
         VisibleSelection rangeSelection(endOfWord(leftSelection.start()), selection.visibleStart());
         int leftDistance = TextIterator::rangeLength(rangeSelection.toNormalizedRange().get());
 
-        VisibleSelection rightSelection(nextWordPosition(selection.start()));
-        rightSelection = previousWordPosition(rightSelection.start());
+        VisibleSelection rightSelection = previousWordPosition(nextWordPosition(selection.start()));
         bool rightSelectionIsOnWord = !isWhitespace(rightSelection.visibleStart().characterAfter());
 
         rangeSelection = VisibleSelection(rightSelection.visibleStart(), selection.visibleStart());
